<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Connect</string>
    <string name="splash_screen_title">Connect</string>
    <string name="version">Version 1.0.0\nCopyRight (c) Oudumbar, Inc. All Rights Reserved</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign in</string>
    <string name="nickname">Nickname</string>
    <string name="email">Email</string>
    <string name="birthdate">Birth Date</string>
    <string name="gender">Gender</string>
    <string name="genderneutral">Prefer Not To Say</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="button">Set Password</string>
    <string name="date">Date</string>
    <string name="password">Password</string>
    <string name="chess">Chess</string>
    <string name="badminton">Badminton</string>
    <string name="tennis">Tennis</string>
    <string name="pingpong">Ping Pong</string>
    <string name="squash">Squash</string>
    <string name="raquet_ball">Raquetball</string>
    <string name="basket_ball">Basketball</string>
    <string name="jam">Music Jam</string>
    <string name="coffee">Coffee</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="submit_button">Submit</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="destination">Where</string>
    <string name="time">Time</string> 
    <string name="entry">New entry</string>   
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="pro">Pro</string>
    <string name="date_of_play">Date</string>
    <string name="example_text">e.g. Join me for a game of ping-pong at Noyes Recreation Center on Tuesday 18th, 2011 at around 8:00 pm.</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="refresh">Refresh</string>
    <string name="exit">Sign out</string>
    <string name="level">Level</string>
    <string name="fullname">Full Name</string>
    <string name="categories">Categories</string>
    <string name="replies">Replies</string>
    <string name="myprofile">My Profile</string>
    <string name="signupstring">Find people like you...</string>
</resources>
