<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="@color/pagecolor">

	<ScrollView android:id="@+id/scrollview" android:scrollbars="vertical"
		android:isScrollContainer="true" android:layout_width="fill_parent"
		android:layout_height="fill_parent">

		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:id="@+id/inscrolllinearlayout" android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:orientation="vertical">

			<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:orientation="horizontal" android:layout_width="fill_parent"
				android:layout_height="fill_parent">
				<ImageButton android:id="@+id/ImageButton_Avatar"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:adjustViewBounds="true" android:scaleType="fitXY"
					android:maxHeight="@dimen/avatar_size" android:minHeight="@dimen/avatar_size"
					android:src="@drawable/joinme"></ImageButton>
				<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
					android:orientation="vertical" android:layout_width="fill_parent"
					android:layout_height="fill_parent">
					<TextView android:text="@string/nickname"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:textSize="7pt"></TextView>
					<EditText android:id="@+id/EditText_Nickname"
						android:maxLines="1" android:maxLength="20" android:inputType="textPersonName"
						android:layout_width="fill_parent" android:layout_height="wrap_content"></EditText>
				</LinearLayout>
			</LinearLayout>
			<TextView android:text="@string/fullname"
	android:layout_height="wrap_content" android:layout_width="wrap_content"
	android:textSize="7pt"></TextView>
	<EditText android:id="@+id/Full_Name" android:maxLines="1"
		android:inputType="textPersonName" android:layout_width="fill_parent"
		android:layout_height="wrap_content"></EditText>
	
				
				
			<TextView android:text="@string/email"
				android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:textSize="7pt"></TextView>
			<EditText android:id="@+id/EditText_Email" android:maxLines="1"
				android:inputType="textEmailAddress" android:layout_width="fill_parent"
				android:layout_height="wrap_content"></EditText>

			<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:orientation="horizontal" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:padding="5dp">
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:text="City" />
				<EditText android:id="@+id/EditText_City" android:maxLines="1"
					android:inputType="text" android:layout_width="fill_parent"
					android:layout_height="wrap_content"></EditText>
			</LinearLayout>
			<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:orientation="horizontal" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:padding="5dp">
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:text="Country" />
				<AutoCompleteTextView android:id="@+id/autocomplete_country"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:layout_marginLeft="5dp" />
			</LinearLayout>

			<TextView android:text="@string/password"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:textSize="7pt"></TextView>
			<LinearLayout android:orientation="horizontal"
				android:layout_width="fill_parent" android:layout_height="fill_parent">
				<Button android:id="@+id/Button_Password" android:text="@string/button"
					android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
				<TextView android:id="@+id/Set_Password" android:text="Password not set"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:textSize="7pt"></TextView>
			</LinearLayout>
			
			
			<Button android:id="@+id/Submit_Button" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:gravity="center"
				android:layout_gravity="center_vertical|center_horizontal"
				android:text="@string/submit_button">
			</Button>
		</LinearLayout>
	</ScrollView>

</LinearLayout>
